<resources>
    <string name="app_name">Space Challenge</string>

    // Main Activity
    <string name="distributed_score_text">Dağıtılacak Puan:</string>
    <string name="durability_title_text">Dayanıklılık</string>
    <string name="speed_title_text">Hız</string>
    <string name="et_hint_text">Name</string>
    <string name="capacity_title_text">Kapasite</string>
    <string name="main_button_text">Devam Et</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites_title_text">Favoriler</string>
</resources>