<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_distributed_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/distributed_score_text"
            android:textColor="@color/black_alpha_30"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_start_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_black_rectangle"
            android:padding="@dimen/margin_medium"
            android:text="15"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_distributed_score"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view_main"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_normal"
        android:background="@color/black_alpha_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:background="@drawable/bg_black_rectangle"
        android:hint="@string/et_hint_text"
        android:maxLines="1"
        android:padding="@dimen/margin_medium"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_main" />

    <TextView
        android:id="@+id/tv_durability_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/durability_title_text"
        android:textColor="@color/black_alpha_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <SeekBar
        android:id="@+id/sb_durability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_large"
        android:max="15"
        android:progressTint="@color/black_alpha_30"
        android:thumbTint="@color/black_alpha_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_durability_title" />


    <TextView
        android:id="@+id/tv_speed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/speed_title_text"
        android:textColor="@color/black_alpha_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_durability_title"
        app:layout_constraintTop_toBottomOf="@id/sb_durability" />

    <SeekBar
        android:id="@+id/sb_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_large"
        android:progressTint="@color/black_alpha_30"
        android:max="15"
        android:thumbTint="@color/black_alpha_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_speed_title" />

    <TextView
        android:id="@+id/tv_capacity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/capacity_title_text"
        android:textColor="@color/black_alpha_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_speed_title"
        app:layout_constraintTop_toBottomOf="@id/sb_speed" />

    <SeekBar
        android:id="@+id/sb_capacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_twenty"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginEnd="@dimen/margin_large"
        android:max="15"
        android:thumbTint="@color/black_alpha_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:progressTint="@color/black_alpha_30"
        app:layout_constraintTop_toBottomOf="@id/tv_capacity_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:backgroundTint="@color/white"
        android:insetTop="@dimen/no_space"
        android:insetBottom="@dimen/no_space"
        android:paddingStart="@dimen/margin_xlarge"
        android:paddingTop="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_xlarge"
        android:paddingBottom="@dimen/margin_medium"
        android:text="@string/main_button_text"
        android:textAllCaps="false"
        android:textColor="@color/black_alpha_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sb_capacity"
        app:strokeColor="@color/black_alpha_30"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
